fix: removed horizontal scrollbar from menu

--- a/public/layout.css
+++ b/public/layout.css
@@ -46,6 +46,7 @@ h1 {
     border-left: 1px solid #ccc;
     border-radius: 0 5px 5px 0;
     overflow-y: scroll;
+    overflow-x: hidden;
     padding-bottom: 30px;
     scrollbar-width: thin;
     scrollbar-color: #bbb transparent;
